tests/ui/unstable-feature_bound/unstable-feature-cross-crate-require-bound.fail.stderr
error: unstable feature `feat_bar` is used without being enabled.
  --> $DIR/unstable-feature-cross-crate-require-bound.rs:12:5
   |
LL |     Bar::foo();
   |     ^^^
   |
   = help: The feature can be enabled by adding `#![feature(feat_bar)]` to the crate root
   = note: required for `Bar` to implement `Foo`

error: aborting due to 1 previous error

